--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ charset-normalizer==2.0.12
 click==8.0.4
 cookiecutter==1.7.3
 dj-database-url==0.5.0
+django-crispy-forms==1.14.0
 django-filter==21.1
 django-modelcluster==5.3
 django-taggit==2.1.0
