--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ chardet==4.0.0
 charset-normalizer==2.0.12
 click==8.0.4
 cookiecutter==1.7.3
+crispy-bootstrap5==0.6
 dj-database-url==0.5.0
 django-crispy-forms==1.14.0
 django-filter==21.1
