--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ cookiecutter==1.7.3
 crispy-bootstrap5==0.6
 dj-database-url==0.5.0
 django-crispy-forms==1.14.0
+django-debug-toolbar==3.2.4
 django-filter==21.1
 django-modelcluster==5.3
 django-taggit==2.1.0
