--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ django-crispy-forms==1.14.0
 django-debug-toolbar==3.2.4
 django-filter==21.1
 django-modelcluster==5.3
+django-recurrence==1.11.1
 django-taggit==2.1.0
 django-treebeard==4.5.1
 djangorestframework==3.13.1
